# viatu

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: b03b8697f040_initial_schema.py  c5a1d8e3f2b9_dashboard.py
app/: auth.py  celery_app.py  config.py  cookie_store.py  db.py  latam_client.py  main.py  models.py  notifier.py  playwright_search.py  primer.py  schemas.py  tasks.py
docs/: antibot-strategy.md  dashboard-plan.md  plan.md  sample-response.json
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: Layout.jsx  WatchCard.jsx
frontend/src/pages/: Dashboard.jsx  Login.jsx  SearchPage.jsx  WatchDetail.jsx
tests/: test_notifier.py  test_parser.py  test_watches.py
